# GravityForce

./: .gitignore  AGENTS.md  ASSETS.md  BUILD_SUMMARY.md  DATAFILES.md  FINAL_SUMMARY.md  GAMELOOP_VERBOSITY.md  GravityStrike.upp  Makefile  QWEN.md  README.md  TASKS.md  autogen.sh  build.sh  build_output.txt  build_umk.sh  check-deps.sh  configure.ac  configure~  fixunix.sh  gslnx  gssrc_de.txt  gssrc_en.txt  package.sh  setup.sh  test_allegro  test_allegro.cpp  test_allegro5  test_allegro5.cpp
.qwen/: PROJECT_SUMMARY.md
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
dat/: gfw1.fmp  gfw2.fmp  gfw3.fmp  gfw4.fmp  gfw5.fmp  gfw6.fmp  gs.cfg  gs.xm  text.lua
doc/: readme.txt
doc/eng/: faq.txt  gsdoceng.txt  history.txt  scripteng.txt
doc/ger/: bugs.txt  faq.txt  fmp.txt  funclib.txt  gsdocger.txt  history.txt  maps.txt  script.txt  scriptex.txt  shipimg.txt  tips.txt  upgrade.txt
levels/: compat.lua  frapa_cg.ini  frapa_cg.sc  global.ini  global.sc  gm_ctf.sc  gm_hh.sc  gm_race.sc  libcargo.sc  libeff.sc  libextra.sc  libhelp.sc  libki.sc  libosd.sc  libsw.sc
levels/dogfight/SGF/: Doggie.ini  Doggie.lvl  Doggie.mar  Doggie.tga
levels/dogfight/anomal/: anomal.ini  anomal.lvl  anomal.mar  anomal.tga
levels/dogfight/arena/: arena1.ini  arena1.lvl  arena1.mar  arena1.sc  arena1.tga  arena2.ini  arena2.lvl  arena2.mar  arena2.sc  arena2.tga
levels/dogfight/bling/: bling.ini  bling.lvl  bling.mar  bling.sc  bling.tga
levels/dogfight/bowle/: bowle.ini  bowle.lvl  bowle.mar  bowle.tga
levels/dogfight/catastr/: catastr.ini  catastr.lvl  catastr.mar  catastr.sc  catastr.tga
levels/dogfight/center/: center.ini  center.lvl  center.mar  center.sc  center.tga
levels/dogfight/defqd/: defqd01.ini  defqd01.lvl  defqd02.ini  defqd02.lvl  defqd02.sc  defqd03.ini  defqd03.lvl  defqd03.sc  defqd04.ini  defqd04.lvl  defqd04.sc  defqd05.ini  defqd05.lvl  defqd05.sc  defqd0x.ini  defqd0x.lvl  defqd0x.mar  defqd0x.sc  defqd0x.tga  gfqd01.tga  gfqd02.tga  gfqd03.tga  gfqd04.tga
levels/dogfight/dm42/: dm42.ini  dm42.lvl  dm42.mar  dm42.sc  dm42.tga
levels/dogfight/donut/: donut.ini  donut.lvl  donut.mar  donut.sc  donut.tga
levels/dogfight/fracht/: fracht.ini  fracht.lvl  fracht.mar  fracht.sc  fracht.tga
levels/dogfight/klaustr/: klausp.ini  klausp.lvl  klausp.mar  klausp.tga  klaustr.ini  klaustr.lvl  klaustr.sc  klaustr.tga
levels/dogfight/loddo/: loddo.ini  loddo.lvl  loddo.mar  loddo.tga
levels/dogfight/marmap/: Marmap.ini  Marmap.lvl  Marmap.mar  Marmap.sc  Marmap.tga
levels/dogfight/nuke_dm/: nuke_dm1.ini  nuke_dm1.lvl  nuke_dm1.mar  nuke_dm1.tga  nuke_dm2.ini  nuke_dm2.lvl  nuke_dm2.mar  nuke_dm2.tga  nuke_dm3.ini  nuke_dm3.lvl  nuke_dm3.mar  nuke_dm3.sc  nuke_dm3.tga  nuke_dm4.ini  nuke_dm4.lvl  nuke_dm4.mar  nuke_dm4.sc  nuke_dm4.tga
levels/dogfight/ocean/: ocean.ini  ocean.lvl  ocean.mar  ocean.sc  ocean.tga
levels/dogfight/rock/: rock.ini  rock.lvl  rock.mar  rock.tga
levels/dogfight/rooms/: rooms.ini  rooms.lvl  rooms.mar  rooms.sc  rooms.tga
ships/: a-10.shp  a-10.tga  a-wing.shp  a-wing.tga  a10.shp  a10.tga  awblue.shp  awblue.tga  awgold.shp  awgold.tga  awgreen.shp  awgreen.tga  awred.shp  awred.tga  battle.shp  battle.tga  bc.shp  bc.tga  behemoth.shp  blade2k.shp  borg.shp  borg.tga  broiler.shp  disrupt.shp  disrupt.tga  dragon.shp  dragon.tga  dv.shp  dv.tga  entity.shp  entity.tga  expon2.shp  expon2.tga  f-22.shp  f-22.tga  f16.shp  f16.tga  firebat.shp  firebat.tga  flscer.shp  (+84 more)
src/: Makefile  Makefile.am  Makefile.in  allegro4_functions.txt  allegro5_compat.h  allegro5_wrapper.cpp  allegro5_wrapper.h  allegro_additions.txt  allegro_functions.patch  allegro_functions.txt  cos.h  distance_func.patch  fonts.h  gsbase.cpp  gsbase.h  gsbullet.cpp  gsbullet.h  gsclear.cpp  gsclear.h  gscontrl.cpp  gscontrl.h  gscrater.cpp  gscrater.h  gsd.h  gseffect.cpp  gseffect.h  gsenemy.cpp  gsenemy.h  gserror.cpp  gserror.h  gsexplo.cpp  gsexplo.h  gsfade.cpp  gsfade.h  gsframes.cpp  gsframes.h  gsglob.cpp  gsglob.h  gshelper.cpp  gshelper.h  (+61 more)
src/contrib/: astar.cpp  astar.h  clipbrd.c  clipbrd.h  hash.h  md5.c  md5.h  md5class.cpp  md5class.h
src/contrib/old/: md5.c  md5.h
src/enemies/: ebigboss.cpp  ebigboss.h  ebigred.cpp  ebigred.h  eblue1.cpp  eblue1.h  eblue2.cpp  eblue2.h  eflak.cpp  eflak.h  epulse.cpp  epulse.h  erelash.cpp  erelash.h  estower.cpp  estower.h  etank1.cpp  etank1.h  etank2.cpp  etank2.h  ethree.cpp  ethree.h  etypes.h  euser.cpp  euser.h
src/menu/: gsmd.h  gsmenu.cpp  gsmenu.h  m1pstats.cpp  m1pstats.h  m2pstats.cpp  m2pstats.h  mbullet.cpp  mbullet.h  mchship.cpp  mchship.h  mctrl.cpp  mctrl.h  mctrl2.cpp  mctrl2.h  mctrlsp.cpp  mctrlsp.h  mmain.cpp  mmain.h  mminig.cpp  mminig.h  mnetgame.cpp  mnetgame.h  mnetgini.cpp  mnetgini.h  mnwstats.cpp  mnwstats.h  moneplay.cpp  moneplay.h  moptions.cpp  moptions.h  mpixels.cpp  mpixels.h  mplayer.cpp  mplayer.h  mshpbld.cpp  mshpbld.h  mstars.cpp  mstars.h  mtwoplay.cpp  (+1 more)
src/menu/controls/: makeyb.cpp  makeyb.h  maoption.cpp  maoption.h  marrowb.cpp  marrowb.h  mbar.cpp  mbar.h  mblank.cpp  mblank.h  mchkbox.cpp  mchkbox.h  mcontrol.cpp  mcontrol.h  mlevsel.cpp  mlevsel.h  mmbutton.cpp  mmbutton.h  mmsgbox.cpp  mmsgbox.h  mrship.cpp  mrship.h  msbutton.cpp  msbutton.h  mship.cpp  mship.h  mtext.cpp  mtext.h  mtextbox.cpp  mtextbox.h  mtextfld.cpp  mtextfld.h  mtslider.cpp  mtslider.h  mtypes.h  mweapic.cpp  mweapic.h
src/network/: BasicDataStructures.h  BitStream.h  GetTime.h  LinkedList.h  NetworkCore.h  NetworkTypes.h  PacketEnumerations.h  PacketPriority.h  RakClientInterface.h  RakNet.h  RakNetStatistics.h  RakNetworkFactory.h  RakServerInterface.h  StringCompressor.h  UtilityFunctions.h
src/weapons/: bacid.cpp  bacid.h  bbigbomb.cpp  bbigbomb.h  bbomb.cpp  bbomb.h  bbumper.cpp  bbumper.h  bfake.cpp  bfake.h  bfreezer.cpp  bfreezer.h  bgas.cpp  bgas.h  blaser.cpp  blaser.h  bmine.cpp  bmine.h  bnormal.cpp  bnormal.h  bprobe.cpp  bprobe.h  brocket.cpp  brocket.h  bshotgun.cpp  bshotgun.h  bshrink.cpp  bshrink.h  btypes.h  buser.cpp  buser.h
(+373 files in other folders)
