# Gravity Strike - Automake file
# Created for autotools build system

bin_PROGRAMS = gslnx
gslnx_SOURCES = src/cos.h \
                src/fonts.h \
                src/gsbase.cpp \
                src/gsbase.h \
                src/gsbullet.cpp \
                src/gsbullet.h \
                src/gsclear.cpp \
                src/gsclear.h \
                src/gscompen.cpp \
                src/gscompen.h \
                src/gscontrl.cpp \
                src/gscontrl.h \
                src/gscrater.cpp \
                src/gscrater.h \
                src/gsd.h \
                src/gseffect.cpp \
                src/gseffect.h \
                src/gsenemy.cpp \
                src/gsenemy.h \
                src/gserror.cpp \
                src/gserror.h \
                src/gsexplo.cpp \
                src/gsexplo.h \
                src/gsfade.cpp \
                src/gsfade.h \
                src/gsframes.cpp \
                src/gsframes.h \
                src/gsglob.cpp \
                src/gsglob.h \
                src/gshelper.cpp \
                src/gshelper.h \
                src/gshiscor.cpp \
                src/gshiscor.h \
                src/gslevel.cpp \
                src/gslevel.h \
                src/gslng.cpp \
                src/gslng.h \
                src/gslua.cpp \
                src/gslua.pkg \
                src/gslvlnw.cpp \
                src/gslvlnw.h \
                src/gslvlsp.cpp \
                src/gslvlsp.h \
                src/gsmain.cpp \
                src/gsmain.h \
                src/gsmap.cpp \
                src/gsmap.h \
                src/gsnetcli.cpp \
                src/gsnetcli.h \
                src/gsnetsrv.cpp \
                src/gsnetsrv.h \
                src/gsnetw.cpp \
                src/gsnetw.h \
                src/gsobject.cpp \
                src/gsobject.h \
                src/gsosd.cpp \
                src/gsosd.h \
                src/gspanel.cpp \
                src/gspanel.h \
                src/gspixel.cpp \
                src/gspixel.h \
                src/gsplayer.cpp \
                src/gsplayer.h \
                src/gsplcomp.cpp \
                src/gsplcomp.h \
                src/gsplover.cpp \
                src/gsplover.h \
                src/gsradar.cpp \
                src/gsradar.h \
                src/gsreplay.cpp \
                src/gsreplay.h \
                src/gsscript.cpp \
                src/gsscript.h \
                src/gssd.h \
                src/gssndat.h \
                src/gssound.cpp \
                src/gssound.h \
                src/gswaypnt.cpp \
                src/gswaypnt.h \
                src/luaclass.h \
                src/main.cpp \
                src/mappyal.c \
                src/mappyal.h \
                src/sin.h \
                src/contrib/astar.cpp \
                src/contrib/astar.h \
                src/contrib/clipbrd.c \
                src/contrib/clipbrd.h \
                src/contrib/hash.h \
                src/contrib/md5.c \
                src/contrib/md5.h \
                src/contrib/md5class.cpp \
                src/contrib/md5class.h \
                src/enemies/ebigboss.cpp \
                src/enemies/ebigboss.h \
                src/enemies/eblue1.cpp \
                src/enemies/eblue1.h \
                src/enemies/eblue2.cpp \
                src/enemies/eblue2.h \
                src/enemies/eflak.cpp \
                src/enemies/eflak.h \
                src/enemies/epulse.cpp \
                src/enemies/epulse.h \
                src/enemies/erelash.cpp \
                src/enemies/erelash.h \
                src/enemies/estower.cpp \
                src/enemies/estower.h \
                src/enemies/etank1.cpp \
                src/enemies/etank1.h \
                src/enemies/etank2.cpp \
                src/enemies/etank2.h \
                src/enemies/ethree.cpp \
                src/enemies/ethree.h \
                src/enemies/etypes.h \
                src/enemies/euser.cpp \
                src/enemies/euser.h \
                src/enemies/ebigred.cpp \
                src/enemies/ebigred.h \
                src/menu/gsmd.h \
                src/menu/gsmenu.cpp \
                src/menu/gsmenu.h \
                src/menu/m1pstats.cpp \
                src/menu/m1pstats.h \
                src/menu/m2pstats.cpp \
                src/menu/m2pstats.h \
                src/menu/mbullet.cpp \
                src/menu/mbullet.h \
                src/menu/mchship.cpp \
                src/menu/mchship.h \
                src/menu/mctrl.cpp \
                src/menu/mctrl.h \
                src/menu/mctrl2.cpp \
                src/menu/mctrl2.h \
                src/menu/mctrlsp.cpp \
                src/menu/mctrlsp.h \
                src/menu/mmain.cpp \
                src/menu/mmain.h \
                src/menu/mminig.cpp \
                src/menu/mminig.h \
                src/menu/mnetgame.cpp \
                src/menu/mnetgame.h \
                src/menu/mnetgini.cpp \
                src/menu/mnetgini.h \
                src/menu/mnwstats.cpp \
                src/menu/mnwstats.h \
                src/menu/moneplay.cpp \
                src/menu/moneplay.h \
                src/menu/moptions.cpp \
                src/menu/moptions.h \
                src/menu/mpixels.cpp \
                src/menu/mpixels.h \
                src/menu/mplayer.cpp \
                src/menu/mplayer.h \
                src/menu/mshpbld.cpp \
                src/menu/mshpbld.h \
                src/menu/mstars.cpp \
                src/menu/mstars.h \
                src/menu/mtwoplay.cpp \
                src/menu/mtwoplay.h \
                src/weapons/bacid.cpp \
                src/weapons/bacid.h \
                src/weapons/bbigbomb.cpp \
                src/weapons/bbigbomb.h \
                src/weapons/bbomb.cpp \
                src/weapons/bbomb.h \
                src/weapons/bbumper.cpp \
                src/weapons/bbumper.h \
                src/weapons/bfake.cpp \
                src/weapons/bfake.h \
                src/weapons/bfreezer.cpp \
                src/weapons/bfreezer.h \
                src/weapons/bgas.cpp \
                src/weapons/bgas.h \
                src/weapons/blaser.cpp \
                src/weapons/blaser.h \
                src/weapons/bmine.cpp \
                src/weapons/bmine.h \
                src/weapons/bnormal.cpp \
                src/weapons/bnormal.h \
                src/weapons/bprobe.cpp \
                src/weapons/bprobe.h \
                src/weapons/brocket.cpp \
                src/weapons/brocket.h \
                src/weapons/bshotgun.cpp \
                src/weapons/bshotgun.h \
                src/weapons/bshrink.cpp \
                src/weapons/bshrink.h \
                src/weapons/btypes.h \
                src/weapons/buser.cpp \
                src/weapons/buser.h

gslnx_CXXFLAGS = @ALLEGRO_CFLAGS@ @ALLEGTTFCFLAGS@
gslnx_LDFLAGS = @ALLEGRO_LIBS@ @ALLEGTTFLIBS@ -lalttf -llua -llualib -ltolua -lnet

# Extra files for distribution
EXTRA_DIST = ../fixunix.sh ../gssrc_en.txt ../gssrc_de.txt ../keyboard.dat